--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   <meta name="theme-color" content="#000000" />
   <meta
           name="description"
-          content="Курсовой проект Екатерина"
+          content="Курсовой проект Никита"
   />
-  <title>Курсач</title>
+  <title>Bank</title>
 </head>
 <body style="margin: 0; padding: 0">
 <noscript>Вам необходимо включить JavaScript для запуска этого приложения.</noscript>
