--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
           name="description"
           content="Курсовой проект Никита"
   />
-  <title>Bank</title>
+  <title>BM</title>
 </head>
 <body style="margin: 0; padding: 0">
 <noscript>Вам необходимо включить JavaScript для запуска этого приложения.</noscript>
